# skills

./: .gitignore  CLAUDE.md  README.md  mise.toml
plugins/flow/skills/flow/scripts/: _atomicio.py  _jsonl.py  _locking.py  _memory_paths.py  _registry.py  _workspace.py  baseline_collect.py  branch_ticket.py  bundle_discover.py  compose_commit.py  diff_extract.py  dispatch_stage.py  flow_friction.py  flow_worktree.py  heartbeat.py  init.py  inventory.md  lease.py  lint_ticket.py  machinery_edit.py  memory_append.py  metric.py  mise.toml  observe_ship_event.py  pending_mutations.py  pyproject.toml  recall.py  recall_pending.py  recover.py  reflect_inputs.py  resolve_handler.py  snapshot.py  state.py  status.py  sync.py  ticket_frontmatter.py  tracker.py  tracker_beads.py  tracker_cli.py  tracker_jira.py  (+2 more)
plugins/flow/skills/flow/scripts/tests/: conftest.py  test_atomicio.py  test_baseline_collect.py  test_beads_adapter.py  test_branch_ticket.py  test_bundle_discover.py  test_compose_commit.py  test_diff_extract.py  test_dispatch_stage.py  test_flow_friction.py  test_flow_worktree.py  test_heartbeat.py  test_init.py  test_jira_adapter.py  test_jsonl.py  test_lease.py  test_lint_ticket.py  test_locking.py  test_machinery_edit.py  test_memory_append.py  test_memory_root.py  test_metric.py  test_observe_ship_event.py  test_pending_mutations.py  test_recall.py  test_recall_pending.py  test_recover.py  test_reflect_inputs.py  test_registry.py  test_resolve_handler.py  test_ship_it_bundle.py  test_snapshot.py  test_state.py  test_status.py  test_sync.py  test_ticket_frontmatter.py  (+5 more)
(+169 files in other folders)
